CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

#===============================================================================
# Load macros and functions for Elements-based projects
#===============================================================================

find_package(ElementsProject)

#===============================================================================
# Declare project name and version
# Example with dependency:
#                         elements_project(MyProject 1.0 USE Element 3.9)
#===============================================================================

elements_project(KRaster 1.0 USE Elements 6.0.1)
